fixed headers, cell spacing

--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -93,33 +93,21 @@ body {
   }
 }
 
-#header-row th {
-  background-color: white;
-  border-top: 0px;
-  text-align: center;
-}
-
-.table {
-  text-align: center;
-}
-
-.campaign-name-cell {
-  text-align: left;
-}
-
 .panel div {
-  font-size: 0.98em;
+  font-size: 0.99em;
 }
 
+/*
+ *  Campaign listing 'table' header style
+ */
 .campaign-id-header {
   width: 70px;
   float:left;
 }
 
 .campaign-name-header {
-  width: 400px;
+  width: 320px;
   float:left;
-  color: #3299CC;
 }
 
 .campaign-status-header {
@@ -128,10 +116,38 @@ body {
 }
 
 .campaign-rem-days-header {
-  width: 70px;
+  width: 140px;
   float:left;
 }
 
 .campaign-state-header {
+  text-align: right;
+}
+
+/*
+ *  Campaign listing 'table' style
+ */
+.campaign-id-cell {
+  width: 70px;
+  float:left;
+}
+
+.campaign-name-cell {
+  width: 320px;
+  float:left;
+  color: #3299CC;
+}
+
+.campaign-status-cell {
+  width: 140px;
+  float:left;
+}
+
+.campaign-rem-days-cell {
+  width: 110px;
+  float:left;
+}
+
+.campaign-state-cell {
   text-align: right;
 }
